--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
