--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
-    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mqtt": "^5.10.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,6 +34,7 @@
     "@angular/cli": "^16.2.15",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
